# ENGINE-2.0

./: .clang-format  .codex_src_files.txt  .gitignore  3d_refactor_plan.md  ANCHOR_POINTS_PLAN.md  CMakeLists.txt  CUSTOM_CONTROLLERS_AND_HELPERS.md  EDITOR_SHORTCUTS.md  FRAME_EDITOR_PLAN.md  README.md  anchor_points_feature_plan.md  child_asset_timeline_plan.md  clean_manifest.py  codex_playtest.bat  codex_playtest_report_tmp.md  compile_and_run.bat  demo.py  dev_mode_settings.json  diff.tmp  engine.drawio.xml  frame_editor_point_selection_plan.md  french.json  implementation_plan.md  log.txt  manifest.json  manifest_hold.json  map_save_overhaul_plan.md  ok.bat  runtime_frame_stats.csv  runtime_ownership.drawio.xml  runtime_ownership_refactor_plan.md  set_rebuild.py  setup.bat  setup.json  tasks.csv  tasks.md  tasks.txt  temp_build.bat  temp_patch3.py  temp_patch4.py  (+10 more)
.github/: pull_request_template.md
ENGINE/: AssetToolkit.cpp  AssetToolkit.hpp  CacheManager.cpp  CacheManager.hpp  EffectsParser.cpp  EffectsParser.hpp  debug_flag_sync_regression_test.ilk  dev_mode_settings.json  dof_blur_strength_test.ilk  enemy_attack_cycle_regression_test.ilk  enemy_behavior_phase_regression_test.ilk  enemy_combat_cooldown_regression_test.ilk  engine_world_tests.ilk  main.cpp  map_template_data_cleanup_test.ilk  movement_paths_frame_edit_state_test.ilk  room_legacy_migration_regression_test.ilk  spawn_trail_classification_test.ilk  sprite_floor_clip_test.ilk  throw_physics_runtime_test.ilk
ENGINE/TESTS/: frame_editor_session_test_helpers.cpp  test_animation_child_clone.cpp  test_animation_child_runtime.cpp  test_animation_child_visibility.cpp  test_attack_validation.cpp  test_dev_json_store.cpp  test_frame_editor_async_payload.cpp  test_frame_point_resolver.cpp  test_manifest_loader.cpp  test_scene_renderer_prereqs.cpp  test_world_grid_same_chunk_move.cpp
ENGINE/animation_update/: animation_runtime.cpp  animation_runtime.hpp  animation_update.cpp  animation_update.hpp  attack.hpp  attack_validation.cpp  attack_validation.hpp  child_3d_world_position.hpp  child_attachment_controller.cpp  child_attachment_controller.hpp  combat_geometry.hpp  get_best_path.cpp  movement_plan_executor.cpp  path_sanitizer.cpp
ENGINE/asset/: Asset.cpp  Asset.hpp  animation.cpp  animation.hpp  animation_child_data.hpp  animation_cloner.cpp  animation_frame.hpp  animation_frame_variant.hpp  animation_loader.cpp  asset_info.cpp  asset_info.hpp  asset_utils.hpp  controller_factory.cpp  fog_asset_manager.cpp  fog_asset_manager.hpp  initialize_assets.cpp
ENGINE/asset_info_methods/: asset_child_loader.cpp  lighting_loader.cpp
ENGINE/core/: AssetsManager.cpp  AssetsManager.hpp  asset_list.cpp  asset_list.hpp  asset_loader.cpp  attack_send.hpp  find_current_room.cpp  popup_manager.cpp  popup_manager.hpp  tile_builder.cpp
ENGINE/dev_mode/: MapLightPanel.cpp  MapLightPanel.hpp  asset_filter_bar.cpp  asset_filter_bar.hpp  asset_info_sections.hpp  asset_info_ui.cpp  asset_info_ui.hpp  asset_library_ui.cpp  asset_paths.hpp  camera_ui.cpp  camera_ui.hpp  depth_cue_settings.hpp  dev_camera_controls.cpp  dev_camera_controls.hpp  dev_controls.cpp  dev_controls.hpp  dev_footer_bar.cpp  dev_footer_bar.hpp  fog_settings_panel.cpp  fog_settings_panel.hpp  foreground_background_effect_panel.cpp  foreground_background_effect_panel.hpp  frame_editor_session.cpp  frame_editor_session.hpp  frame_editor_session_child_timelines.cpp  map_assets_modals.cpp  map_assets_modals.hpp  map_editor.cpp  map_editor.hpp  map_mode_ui.cpp  map_mode_ui.hpp  other_settings_and_controls.cpp  other_settings_and_controls.hpp  pan_and_height.cpp  pan_and_height.hpp  room_editor.cpp  room_editor.hpp  room_overlay_renderer.cpp  search_assets.cpp  search_assets.hpp  (+2 more)
ENGINE/map_generation/: generate_rooms.cpp  generate_rooms.hpp  generate_trails.cpp  room.cpp  room.hpp  trail_geometry.cpp
ENGINE/render/: camera_controller.cpp  camera_controller.hpp  composite_asset_renderer.cpp  composite_asset_renderer.hpp  dynamic_boundary_system.cpp  dynamic_boundary_system.hpp  dynamic_fog_system.cpp  dynamic_fog_system.hpp  fog_renderer.cpp  fog_renderer.hpp  light_flicker.cpp  render.cpp  render.hpp  scaling_logic.hpp  warped_screen_grid.cpp  warped_screen_grid.hpp
ENGINE/render_pipeline/: ScalingProfileBuilder.cpp
ENGINE/runtime/: json_coercion.hpp
ENGINE/spawn/: asset_spawner.cpp  check.cpp  check.hpp  map_wide_asset_spawner.cpp  spawn_context.cpp  spawn_context.hpp
ENGINE/tests/: debug_flag_sync_regression_test.cpp  dof_blur_strength_test.cpp  enemy_ai_layers_regression_test.cpp  enemy_attack_cycle_regression_test.cpp  enemy_behavior_phase_regression_test.cpp  enemy_combat_cooldown_regression_test.cpp  engine_tests_main.cpp  map_template_data_cleanup_test.cpp  movement_paths_frame_edit_state_test.cpp  (+90 more)
SRC/: shift.py
TESTS/: frame_editor_session_test_helpers.cpp  test_animation_child_modes.cpp  test_animation_child_runtime.cpp  test_animation_child_visibility.cpp  test_animation_on_end.cpp  test_attack_validation.cpp  test_frame_editor_async_payload.cpp  test_manifest_loader.cpp  test_world_grid_same_chunk_move.cpp
TEST_TMP/: engine_stderr.txt  engine_stdout.txt  forrest_debug_stderr.txt  forrest_debug_stdout.txt  loot_stderr.txt  loot_stdout.txt  manifest.json  spider_runtime_capture.txt
TXT_OUTPUT/: tasklist_verbose.txt
build_codex/: .ninja_deps  .ninja_log  build.ninja
build_verify/: .ninja_deps  .ninja_log  build.ninja  engine.exp
docs/: CODEX_PLAYTEST.md  dev_mode_save_load_outline.md  room-config-legacy-widgets.md  runtime_gpu_renderer.md  tasks.csv
documents/: AI_FIX_PLAN.md
fog/: make.py
resources/: dust.py  ok.py  trim_2.py
scripts/: anchor_point_editor.py  check_legacy_markers.py  clean_manifest.py  codex_playtest.ps1  codex_playtest_report.ps1  depth_cue_effects.py  migrate_animation_inversion_xyz.py  migrate_asset_enable_flags.py  migrate_room_size.py  normalize_anchor_child_candidates.py  normalize_light_anchors.py
tools/: asset_tool.py  basic_asset_info.py  cache_validator.py  generate_asset_fog.py  light_tool.py
(+1146 files in other folders)
